--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 # example netlify.toml
 [build]
-  command = "wrong"
+  command = "astro build"
   functions = "netlify/functions"
   publish = "dist"
