chore: Adds netlify-plugin-cypress to build pipeline

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,12 @@
   command = "astro build"
   functions = "netlify/functions"
   publish = "dist"
+
+[[plugins]] 
+  package = "netlify-plugin-cypress"
+
+  [plugins.inputs.postBuild]
+    enable = true
+  
+  [plugin.inputs]
+    enable = false
