--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.20"
+    "astro": "^1.0.0-beta.20",
+    "@netlify/plugin-nextjs": "^4.7.1"
+  },
+  "dependencies": {
+    "cypress": "^10.0.3"
   }
 }
