--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,3 +1,6 @@
 {
-  "enabled": true
+  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "extends": [
+    "local>netlify-templates/renovate-config"
+  ]
 }
