--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0-beta.20",
-    "@netlify/plugin-nextjs": "^4.7.1"
+    "astro": "^1.0.0-beta.20"
   },
   "dependencies": {
     "cypress": "^10.0.3"
