--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "astro": "^3.6.4",
-    "prettier-plugin-astro": "^0.12.0"
+    "prettier-plugin-astro": "^0.12.0",
+    "sass": "^1.69.5"
   },
   "dependencies": {
     "cypress": "^13.6.0"
