--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@example/basics",
+  "name": "astro-quickstart",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -9,10 +9,11 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^1.0.0",
-    "prettier-plugin-astro": "^0.13.0"
+    "astro": "^4.6.0",
+    "prettier-plugin-astro": "^0.13.0",
+    "typescript": "^5.4.4"
   },
   "dependencies": {
-    "cypress": "^10.0.3"
+    "cypress": "^13.7.3"
   }
 }
