--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.1.6",
-    "cypress": "^13.11.0"
+    "cypress": "^13.11.0",
+    "path-to-regexp": "^8.1.0"
   }
 }
